# Sweetheart

./: .gitignore  README.md  index.md
.ipynb_checkpoints/: README-checkpoint.md
code.basement.rs/: Cargo.toml
code.basement.rs/src/: main.rs
code.node/: package-lock.json  package.json  tailwind.config.js
code.node/optimum/: linechart.tsx  opt-dashboard.tsx
code.node/react-ts/: package.json  tailwind.config.js
code.node/resources/: startpage.html
code.node/solid/: package.json  tailwind.config.js  tsconfig.json
code.node/solid-ts/: .babelrc  index.html  package.json  tailwind.config.js  tsconfig.json
code.node/typescript/: solid.index.tsx
code.python/: pyproject.toml  tests.py
code.python/package/: __init__.py  asgi3.py  cmdline.py  measurement.py  services.py  systemctl.py  transitional.py
code.python/src/: __init__.py  asgi3.py  cmdline.py  measurement.py  measures.py  pythonsys.py  services.py  snippets.py  src  stemplate.py  subprocess.py  systemctl.py  transitional.py  urllib.py
code.react/: StartPage.html  package-lock.json  package.json  tailwind.config.js  welcome.htm
code.react/optimum/: mtn-notifications.tsx
code.react/resources/: gnuman.css  startpage.html  tailwind.css
code.react/typescript/: barchart.tsx  components.tsx  datahub.ts  datamodels.ts  datamodels.tsx  index.tsx  main.tsx  mtn-notifications.tsx  (+4 more)
code.rust/: Cargo.toml
configuration/: Caddyfile  config.fish  init.bash  initdev.bash  initvps.bash  snap.yml  unit.dev.json  unit.json  unit.test.json
documentation/: Roadmap June 2024.md  Zen of Sweetheart.md  [FR] article langages  [FR] article langages.md  book.toml  core concepts.md  highlights.md
legacy/: legacy.index.tsx
(+46 files in other folders)
