[tool.poetry]
name = "sweetheart"
version = "0.1.3"
description = "innovative foundations for enterprise-grade solutions"
authors = ["IncredibleProgress <champion.nicolas@gmail.com>"]
license = "CeCILL-C FREE SOFTWARE LICENSE AGREEMENT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
