[tool.poetry]
name = "sweetheart"
version = "0.1.3"
description = "innovative foundations for enterprise-grade solutions"
authors = ["IncredibleProgress <champion.nicolas@gmail.com>"]
license = "CeCILL-C FREE SOFTWARE LICENSE AGREEMENT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[sweetheart-dev]
source = "/workspaces/Sweetheart/code.python/src"
symlink = "/home/codespace/.cache/pypoetry/virtualenvs/sweetheart-kYq1UJ0L-py3.10/lib/python3.10/site-packages/sweetheart"
