[tool.poetry]
name = "sweetheart"
version = "0.1.3"
description = "innovative foundations for business-grade solutions"
authors = ["IncredibleProgress <champion.nicolas@gmail.com>"]
license = "CeCILL-C FREE SOFTWARE LICENSE AGREEMENT"
readme = "../README.md"
packages = [{include = "package"}]

[tool.poetry.dependencies]
python = "^3.10"
gel = "^3.1.0"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
